fix cursor on mobile

--- a/src/components/CustomCursor/style.scss
+++ b/src/components/CustomCursor/style.scss
@@ -1,4 +1,5 @@
-.main-cursor,
+@media only screen and (min-width: 720px) {
+    .main-cursor,
 .secondary-cursor {
     z-index: 10000;
     pointer-events: none;
@@ -26,4 +27,5 @@
         border-radius: 50%;
         border: 1px solid black;
     }
+}
 }
