--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -18,15 +18,3 @@ body {
   color: rgb(0, 0, 0);
   font-size: 3em;
 }
-
-.typing-demo {
-  width: 31ch;
-  animation: typing 2.5s steps(33), blink .40s step-end infinite alternate;
-  white-space: nowrap;
-  overflow: hidden;
-  border-right: 3px solid;
-  font-family: 'NeueBit-Bold';
-  color: #fff;
-  font-size: 1em;
-  padding-bottom: 0.5rem;
-}
